--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
     "ng-recaptcha-2": "^14.0.0",
+    "ngx-captcha": "^13.0.0",
     "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.11.1",
