--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "^18.0.0",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
+    "jspdf": "^2.5.1",
     "ng-recaptcha-2": "^14.0.0",
     "ngx-captcha": "^13.0.0",
     "ngx-spinner": "^17.0.0",
+    "pdfmake": "^0.2.10",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.11.1",
     "tslib": "^2.3.0",
